@@ -154,7 +154,11 @@ try:
             resultChiSquared[i, j] = value
     print("resultChiSquared=", repr(resultChiSquared))
 
-
+    RandomGenerator.SetSeed(0)
+    sample1 = Normal().getSample(20)
+    sample2 = Normal(0.1, 1.1).getSample(30)
+    resultTwoSamplesKolmogorov = FittingTest.TwoSamplesKolmogorov(sample1, sample2)
+    print(resultTwoSamplesKolmogorov)
 except:
     import sys
     print("t_FittingTest_std.py", sys.exc_info()[0], sys.exc_info()[1])
