@@ -29,6 +29,7 @@
 === Miscellaneous ===
  * Improved the computeCDF() method of Normal 
  * Add HarrisonMcCabe, BreuschPagan and DurbinWatson tests to test homoskedasticity, autocorrelation of linear regression residuals 
+ * Add two samples Kolmogorov test
 
 === Bug fixes ===
  * #813 (Error when multiplying a Matrix by a SymmetricMatrix)
